[gd_scene load_steps=3 format=3 uid="uid://dljrjoubwe5k6"]

[ext_resource type="Script" uid="uid://cba1xl3yaj82g" path="res://scenes/asteroid_zone.gd" id="1_lfkxf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmli2"]
size = Vector2(144.4, 20)

[node name="AsteroidZone" type="Area2D"]
script = ExtResource("1_lfkxf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1000, 1000)
shape = SubResource("RectangleShape2D_pmli2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
